--- a/sample/package.json
+++ b/sample/package.json
@@ -63,12 +63,12 @@
 		"dotnetcore-acquisition-library": "file:../dotnetcore-acquisition-library"
 	},
 	"devDependencies": {
-		"rimraf": "2.6.3",
-		"typescript": "3.4.5",
-		"tslint": "5.16.0",
-		"@types/node": "12.0.0",
 		"@types/mocha": "5.2.6",
+		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
-		"@types/vscode": "^1.33.0"
+		"@types/vscode": "^1.41.0",
+		"rimraf": "2.6.3",
+		"tslint": "5.16.0",
+		"typescript": "3.4.5"
 	}
 }
