--- a/pipeline-templates/upstream-verify.yaml
+++ b/pipeline-templates/upstream-verify.yaml
@@ -21,3 +21,8 @@ jobs:
       scriptSource: 'filePath'
       scriptPath: 'dependency-verifier.py'
       arguments: '$(System.PullRequest.TargetBranch)'
+  - template: component-governance.yaml
+    parameters:
+      pool: ${{ parameters.pool }}
+      SignType: ${{ parameters.SignType }}
+      useOneEngineeringPool: ${{ parameters.useOneEngineeringPool }}
